Updated css to fix footer overflow problem

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -37,6 +37,7 @@ h1 {
 	text-align: left;
 	padding: 16px;
 	box-sizing: border-box;
+    overflow-y: auto;
 }
 
 .checkboxes input[type="checkbox"] {
